# tree-sitter-slj

./: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json  praštevila-brez-funkcij.slj  praštevila.slj  rekurzija.slj
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: funkcija.txt  funkcijski_klic.txt  okvir.txt  pogojni_stavek.txt  prirejanje.txt  zanka.txt
