[package]
name = "tree-sitter-slj"
description = "SLJ grammar for the tree-sitter parsing library"
version = "0.4.3"
keywords = ["incremental", "parsing", "SLJ"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-SLJ"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
